<resources>
    <string name="app_name">LaboratorioCalificado02</string>
    <string name="btntxt_mostrar">Mostrar</string>
    <string name="btntxt_ocultar">Ocultar</string>
    <string name="title_ejercicio01">Examen Calificado 02</string>
    <string name="txt_ciudad">Ingrese la ciudad</string>
    <string name="txt_direccion">Dirección:</string>
    <string name="txt_edt_direccion">Ingrese la dirección</string>
    <string name="registrar">Registrar</string>
    <string name="ciudad">Ciudad:</string>
    <string name="ingrese_los_productos">Ingrese los productos</string>
    <string name="productos">Productos:</string>
    <string name="ingrese_su_n_mero_de_cliente">Ingrese su número de cliente</string>
    <string name="n_mero_de_cliente">Número de Cliente:</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="nombre">Nombre:</string>
</resources>